# gen-eval

./: .coverage  .gitignore  .pre-commit-config.yaml  .sample.env  Makefile  README.md  demo_interactive.py  main.py  pyproject.toml  run_tests.py
.github/workflows/: ci.yml  release.yml
config/: __init__.py  llm_config.yaml  profiles_example.json  profiles_example.yaml
docs/: architecture.md  getting-started.md
docs/superpowers/plans/: 2026-04-30-profile-driven-evals.md
docs/superpowers/specs/: 2026-04-30-profile-driven-evals-design.md
geneval/: __init__.py  cli.py  exceptions.py  framework.py  llm.py  llm_manager.py  metric_registry.py  profile_manager.py  schemas.py
geneval/adapters/: __init__.py  deepeval_adapter.py  ragas_adapter.py
geneval/profiles/: default_profiles.yaml
tests/: test_cli.py  test_deepeval_adapter.py  test_exceptions.py  test_framework.py  test_framework_profile.py  test_integration.py  test_llm_manager.py  test_metric_registry.py  test_profile_manager.py  test_ragas_adapter.py  test_schemas.py  test_schemas_profile.py
