[project]
name = "gen-eval"
version = "0.1.0"
description = "Project GenEval: A Unified Evaluation Framework for Generative AI Applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "deepeval>=3.3.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "ragas>=0.3.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "langchain-community>=0.1.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "pytest-cov>=6.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geneval"]

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
